package edu.hitsz.prop;

/**
 * 炸弹道具
 *
 * @author huang
 */
public class BombProp extends AbstractProp {
    // TODO: no effect now
    public BombProp(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}